--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,32 @@
-cmake_minimum_required(VERSION 3.17.0)
-project(ArcanoidNN)
+cmake_minimum_required(VERSION 3.16)
+project(Arkanoid LANGUAGES CXX)
 
-set(wxWidgets_ROOT_DIR "C:/wxwidgets")
-set(wxWidgets_LIB_DIR "C:/wxwidgets/lib/vc14x_x64_dll")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
-find_package(wxWidgets REQUIRED COMPONENTS net core base)
-include(${wxWidgets_USE_FILE})
+# Указываем путь к директории со шрифтами
+set(FONTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/fonts")
 
-file(GLOB project_GLOB
-    src/*
-)
-add_executable(ArcanoidNN ${project_GLOB})
+include(FetchContent)
+FetchContent_Declare(SFML
+    GIT_REPOSITORY https://github.com/SFML/SFML.git
+    GIT_TAG 2.6.x)
+FetchContent_MakeAvailable(SFML)
 
-target_link_libraries(ArcanoidNN ${wxWidgets_LIBRARIES})
-target_include_directories(ArcanoidNN PRIVATE ${wxWidgets_INCLUDE_DIRS})
+file(GLOB SOURCES "src/*.cpp")
+add_executable(${PROJECT_NAME} ${SOURCES})
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include/")
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE sfml-graphics)
+target_compile_features(${CMAKE_PROJECT_NAME} PRIVATE cxx_std_17)
+
+configure_file("${FONTS_DIR}/PionerSans-Bold.ttf" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/PionerSans-Bold.ttf" COPYONLY)
+
+if(WIN32)
+    add_custom_command(
+        TARGET ${CMAKE_PROJECT_NAME}
+        COMMENT "Copy OpenAL DLL"
+        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>
+        VERBATIM)
+endif()
+
+install(TARGETS ${CMAKE_PROJECT_NAME})
