a lot of changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.22)
 project(Arkanoid LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
-# Указываем путь к директории со шрифтами
 set(FONTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/fonts")
+set(TEXTURES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/textures")
 
 include(FetchContent)
 FetchContent_Declare(SFML
@@ -19,7 +19,13 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE sfml-graphics)
 target_compile_features(${CMAKE_PROJECT_NAME} PRIVATE cxx_std_17)
 
-configure_file("${FONTS_DIR}/PionerSans-Bold.ttf" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/PionerSans-Bold.ttf" COPYONLY)
+configure_file("${FONTS_DIR}/PionerSans-Bold.ttf" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/PionerSans-Bold.ttf" COPYONLY)
+
+file(GLOB TEXTURES "${TEXTURES_DIR}/*.png")
+foreach(TEXTURE ${TEXTURES})
+    get_filename_component(TEXTURE_NAME "${TEXTURE}" NAME)
+    configure_file("${TEXTURE}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/${TEXTURE_NAME}" COPYONLY)
+endforeach()
 
 if(WIN32)
     add_custom_command(
